Fixed mobile layout issue on homepage

--- a/assets/sass/_variables.scss
+++ b/assets/sass/_variables.scss
@@ -16,7 +16,7 @@ $font_pre: "Courier 10 Pitch", Courier, monospace;
 
 $portrait:480px;
 $xswidth: 768px;
-$tabwidth: 820px;
+$tabwidth: 845px;
 $midwidth: 960px;
 $deskwidth: 1200px;
 $xxl: 1300px;
